--- a/Android/app/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/app/src/main/res/layout/activity_main.xml
@@ -29,16 +29,6 @@
                 android:layout_height="match_parent"
                 android:background="@color/dark_blue">
 
-                <ImageView
-                    android:id="@+id/notificationIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView_main_Avatar"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageView_main_Avatar"
-                    app:srcCompat="@drawable/notification" />
-
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/imageView_main_Avatar"
                     android:layout_width="45dp"
@@ -179,6 +169,7 @@
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
+                            android:id="@+id/cardView_main_PatientHealthMetrics"
                             android:layout_width="120dp"
                             android:layout_height="150dp"
                             android:layout_margin="4dp"
